# a-s3-like-oss

./: .gitignore  CLAUDE.md  hmac-test.hs  s3-oss.cabal
app/: Main.hs
docs/: maturity-report-20260612.md
docs/superpowers/plans/: 2026-06-11-s3-oss-implementation.md
docs/superpowers/specs/: 2026-06-11-s3-like-oss-design.md
src/S3OSS/: Config.hs  Prelude.hs  Presigned.hs  Server.hs  Store.hs  Types.hs  XML.hs
src/S3OSS/Auth/: Policy.hs  SigV4.hs
src/S3OSS/Bucket/: Handler.hs
src/S3OSS/List/: Handler.hs
src/S3OSS/Multipart/: Handler.hs  Manager.hs
src/S3OSS/Object/: Handler.hs  Storage.hs
test/: Spec.hs
test/S3OSS/: AuthIntegrationSpec.hs  E2EUATSpec.hs  IntegrationSpec.hs  TypesSpec.hs  XMLSpec.hs
test/S3OSS/Auth/: PolicySpec.hs  SigV4Spec.hs
test/S3OSS/Bucket/: HandlerSpec.hs
test/S3OSS/Multipart/: ManagerSpec.hs
test/S3OSS/Object/: StorageSpec.hs
