cabal-version:       3.8
name:                s3-oss
version:             0.1.0.0
synopsis:            Secure S3-compatible local-first object storage
description:
  A self-contained, single-binary object storage service that speaks
  the S3 REST API over HTTPS. Features AWS SigV4 authentication,
  IAM-like policy authorization, multipart uploads, presigned URLs,
  and content-addressable local storage.
license:             MIT
license-file:        LICENSE
author:              Simon
maintainer:          simon@example.com
build-type:          Simple

common common-opts
  default-language:    GHC2021
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wpartial-fields -Wredundant-constraints

library
  import:              common-opts
  hs-source-dirs:      src
  exposed-modules:
    S3OSS.Prelude
    S3OSS.Types
    S3OSS.XML
    S3OSS.Config
    S3OSS.Store
    S3OSS.Object.Storage
    S3OSS.Auth.SigV4
    S3OSS.Auth.Policy
    S3OSS.Bucket.Handler
    S3OSS.Object.Handler
    S3OSS.List.Handler
    S3OSS.Multipart.Manager
    S3OSS.Multipart.Handler
    S3OSS.Presigned
    S3OSS.Server
  build-depends:
    , aeson
    , base                 >=4.17 && <5
    , bytestring
    , case-insensitive
    , conduit              ^>=1.3
    , conduit-extra        ^>=1.3
    , containers
    , crypton              ^>=1.0
    , crypton-x509
    , directory
    , filepath
    , http-types
    , memory
    , mtl
    , optparse-applicative
    , random
    , resourcet
    , rio                  ^>=0.1
    , servant              ^>=0.20
    , servant-server       ^>=0.20
    , sqlite-simple        ^>=0.4
    , temporary
    , text
    , time
    , wai                  ^>=3.2
    , wai-extra            ^>=3.1
    , warp                 ^>=3.3
    , warp-tls             ^>=3.4
    , xml-conduit          ^>=1.9
    , yaml

executable s3-oss
  import:              common-opts
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    , base
    , s3-oss
    , optparse-applicative
    , rio
    , text

test-suite s3-oss-test
  import:              common-opts
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    S3OSS.AuthIntegrationSpec
    S3OSS.Auth.SigV4Spec
    S3OSS.Auth.PolicySpec
    S3OSS.Object.StorageSpec
    S3OSS.TypesSpec
    S3OSS.XMLSpec
    S3OSS.Bucket.HandlerSpec
    S3OSS.Multipart.ManagerSpec
    S3OSS.IntegrationSpec
    S3OSS.E2EUATSpec
  build-depends:
    , base
    , bytestring
    , conduit
    , crypton
    , directory
    , hspec               ^>=2.11
    , hspec-wai            ^>=0.11
    , http-conduit
    , http-types
    , network
    , QuickCheck           ^>=2.14
    , rio
    , s3-oss
    , servant
    , servant-server
    , sqlite-simple
    , temporary
    , text
    , time
    , wai
    , wai-extra
    , warp
    , xml-conduit
